@@ -1,5 +1,5 @@
 
-R version 2.7.1 Patched (2008-08-02 r46219)
+R version 2.8.0 Patched (2008-11-27 r47025)
 Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -56,7 +56,7 @@ List of 14
   ..- attr(*, "names")= chr "x"
  $ crit      : num 0.119
  $ mcd.wt    : num [1:52] 1 1 1 1 1 1 1 1 1 1 ...
- $ X         : num [1:52, 1] -0.626  0.184 -0.836  1.595  0.330 ...
+ $ X         : num [1:52, 1] -0.626 0.184 -0.836 1.595 0.33 ...
   ..- attr(*, "dimnames")=List of 2
   .. ..$ : chr [1:52] "1" "2" "3" "4" ...
   .. ..$ : NULL
@@ -113,12 +113,12 @@ List of 14
   ..- attr(*, "names")= chr "x"
  $ crit      : num 1.92e+18
  $ mcd.wt    : num [1:52] 1 1 1 1 1 1 1 1 1 1 ...
- $ X         : num [1:52, 1] -0.626  0.184 -0.836  1.595  0.330 ...
+ $ X         : num [1:52, 1] -0.626 0.184 -0.836 1.595 0.33 ...
   ..- attr(*, "dimnames")=List of 2
   .. ..$ : chr [1:52] "1" "2" "3" "4" ...
   .. ..$ : NULL
  $ raw.cnp2  : num [1:2] 1 1
- $ cnp2      : num [1:2] 1.14 1.00
+ $ cnp2      : num [1:2] 1.14 1
  - attr(*, "class")= chr "mcd"
 > summary(r1.1)
 Minimum Covariance Determinant (MCD) estimator.
@@ -362,5 +362,5 @@ Robust Estimate of Covariance:
 > 
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  0.562 0.04 0.631 0 0 
+Time elapsed:  0.456 0.145 0.633 0 0 
 > 
