@@ -1,6 +1,6 @@
 
-R version 2.6.1 Patched (2007-12-12 r43668)
-Copyright (C) 2007 The R Foundation for Statistical Computing
+R version 2.8.0 Patched (2008-11-27 r47025)
+Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -112,16 +112,16 @@ x            4.061024  0.6512647  6.235596 4.500620e-10
 [1] 11 18 23 29 34 36 46
 > str(rg1.)
 List of 26
- $ coefficients     : Named num [1:2] -2.38  4.90
+ $ coefficients     : Named num [1:2] -2.38 4.9
   ..- attr(*, "names")= chr [1:2] "(Intercept)" "x"
- $ residuals        : Named num [1:51] -0.528  0.622 -0.582  0.435 -0.981 ...
+ $ residuals        : Named num [1:51] -0.528 0.622 -0.582 0.435 -0.981 ...
   ..- attr(*, "names")= chr [1:51] "1" "2" "3" "4" ...
  $ fitted.values    : Named num [1:51] 0.085 0.093 0.102 0.111 0.121 ...
   ..- attr(*, "names")= chr [1:51] "1" "2" "3" "4" ...
  $ w.r              : num [1:51] 1 1 1 1 1 1 1 1 1 1 ...
  $ w.x              : num [1:51] 1 1 1 1 1 1 1 1 1 1 ...
  $ ni               : num [1:51] 3 6 3 6 7 1 4 7 4 4 ...
- $ cov              : num [1:2, 1:2]  0.144 -0.253 -0.253  0.550
+ $ cov              : num [1:2, 1:2] 0.144 -0.253 -0.253 0.55
   ..- attr(*, "dimnames")=List of 2
   .. ..$ : chr [1:2] "(Intercept)" "x"
   .. ..$ : chr [1:2] "(Intercept)" "x"
@@ -151,7 +151,7 @@ List of 26
   ..- attr(*, "names")= chr [1:51] "1" "2" "3" "4" ...
  $ deviance         : NULL
  $ iter             : int 11
- $ y                : Named num [1:51] 0.000 0.167 0.000 0.167 0.000 ...
+ $ y                : Named num [1:51] 0 0.167 0 0.167 0 ...
   ..- attr(*, "names")= chr [1:51] "1" "2" "3" "4" ...
  $ converged        : logi TRUE
  $ model            :'data.frame':	51 obs. of  2 variables:
@@ -170,13 +170,13 @@ List of 26
   .. .. ..- attr(*, "order")= int 1
   .. .. ..- attr(*, "intercept")= int 1
   .. .. ..- attr(*, "response")= int 1
-  .. .. ..- attr(*, ".Environment")=<R_GlobalEnv> 
+  .. .. ..- attr(*, ".Environment")=<environment: R_GlobalEnv> 
   .. .. ..- attr(*, "predvars")= language list(cbind(k, ni - k), x)
   .. .. ..- attr(*, "dataClasses")= Named chr [1:2] "nmatrix.2" "numeric"
   .. .. .. ..- attr(*, "names")= chr [1:2] "cbind(k, ni - k)" "x"
  $ call             : language glmrob(formula = cbind(k, ni - k) ~ x, family = binomial, acc = 1e-10)
  $ formula          :Class 'formula' length 3 cbind(k, ni - k) ~ x
-  .. ..- attr(*, ".Environment")=<R_GlobalEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_GlobalEnv> 
  $ terms            :Classes 'terms', 'formula' length 3 cbind(k, ni - k) ~ x
   .. ..- attr(*, "variables")= language list(cbind(k, ni - k), x)
   .. ..- attr(*, "factors")= int [1:2, 1] 0 1
@@ -187,11 +187,11 @@ List of 26
   .. ..- attr(*, "order")= int 1
   .. ..- attr(*, "intercept")= int 1
   .. ..- attr(*, "response")= int 1
-  .. ..- attr(*, ".Environment")=<R_GlobalEnv> 
+  .. ..- attr(*, ".Environment")=<environment: R_GlobalEnv> 
   .. ..- attr(*, "predvars")= language list(cbind(k, ni - k), x)
   .. ..- attr(*, "dataClasses")= Named chr [1:2] "nmatrix.2" "numeric"
   .. .. ..- attr(*, "names")= chr [1:2] "cbind(k, ni - k)" "x"
- $ data             :<R_GlobalEnv> 
+ $ data             :<environment: R_GlobalEnv> 
  $ offset           : NULL
  $ control          :List of 4
   ..$ acc     : num 1e-10
@@ -265,14 +265,14 @@ Coefficients:
 (Intercept)  -2.8901     0.3499  -8.260   <2e-16 ***
 x             5.5039     0.6447   8.537   <2e-16 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1 
 Robustness weights w.r * w.x: 
  48 weights are ~= 1. The remaining 3 ones are
     42     44     51 
 0.5127 0.7846 0.7388 
 
 Number of observations: 51 
-Fitted by method ‘Mqle’  (in 5 iterations)
+Fitted by method 'Mqle'  (in 5 iterations)
 
 (Dispersion parameter for binomial family taken to be 1)
 
@@ -299,12 +299,12 @@ Coefficients:
 (Intercept)  -2.9454     0.3420  -8.611   <2e-16 ***
 x             5.5461     0.6259   8.861   <2e-16 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1 
 Robustness weights w.r * w.x: 
  All 51 weights are ~= 1.
 
 Number of observations: 51 
-Fitted by method ‘Mqle’  (in 1 iterations)
+Fitted by method 'Mqle'  (in 1 iterations)
 
 (Dispersion parameter for binomial family taken to be 1)
 
@@ -333,12 +333,12 @@ Coefficients:
 (Intercept)  -2.9456     0.3420  -8.612   <2e-16 ***
 x             5.5464     0.6259   8.861   <2e-16 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1 
 Robustness weights w.r * w.x: 
  All 51 weights are ~= 1.
 
 Number of observations: 51 
-Fitted by method ‘Mqle’  (in 1 iterations)
+Fitted by method 'Mqle'  (in 1 iterations)
 
 (Dispersion parameter for binomial family taken to be 1)
 
@@ -364,5 +364,5 @@ test.acc
 +                     rg3.15  [no.comp], tol = 1e-13))
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  0.754 0.035 0.928 0 0 
+Time elapsed:  0.925 0.171 1.148 0 0 
 > 
