@@ -1,5 +1,5 @@
 
-R version 2.7.1 Patched (2008-08-02 r46219)
+R version 2.8.0 Patched (2008-11-27 r47025)
 Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -902,7 +902,7 @@ Error in solve.default(cov, ...) :
   system is computationally singular: reciprocal condition number = 4.85293e-11
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  1.878 0.071 2.013 0 0 
+Time elapsed:  1.908 1.172 3.166 0 0 
 > 
 > ## Now, some small sample cases:
 > 
@@ -959,25 +959,25 @@ In covMcd(X, use.correction = FALSE) :
 List of 18
  $ method     : chr "Minimum Covariance Determinant Estimator."
  $ call       : language covMcd(x = X, use.correction = FALSE)
- $ cov        : num [1:3, 1:3]   2.474  -6.928   0.742  -6.928 273.675 ...
+ $ cov        : num [1:3, 1:3] 2.474 -6.928 0.742 -6.928 273.675 ...
  $ center     : num [1:3] 2.5 -6.5 1.25
  $ n.obs      : int 5
  $ best       : int [1:4] 1 2 3 4
  $ alpha      : num 0.5
  $ quan       : num 4
- $ raw.cov    : num [1:3, 1:3]   2.474  -6.928   0.742  -6.928 273.675 ...
+ $ raw.cov    : num [1:3, 1:3] 2.474 -6.928 0.742 -6.928 273.675 ...
  $ raw.center : num [1:3] 2.5 -6.5 1.25
  $ raw.weights: num [1:5] 1 1 1 1 0
  $ crit       : num 73.3
- $ raw.mah    : num [1:5]    1.52    1.52    1.52    1.52 2724.44
- $ mah        : num [1:5]    1.52    1.52    1.52    1.52 2724.44
+ $ raw.mah    : num [1:5] 1.52 1.52 1.52 1.52 2724.44
+ $ mah        : num [1:5] 1.52 1.52 1.52 1.52 2724.44
  $ mcd.wt     : num [1:5] 1 1 1 1 0
  $ X          : num [1:5, 1:3] 1 2 3 4 5 8 -24 -1 -9 -6 ...
   ..- attr(*, "dimnames")=List of 2
   .. ..$ : chr [1:5] "1" "2" "3" "4" ...
   .. ..$ : NULL
- $ raw.cnp2   : num [1:2] 1.48 1.00
- $ cnp2       : num [1:2] 1.48 1.00
+ $ raw.cnp2   : num [1:2] 1.48 1
+ $ cnp2       : num [1:2] 1.48 1
  - attr(*, "class")= chr "mcd"
 > mcc <- MASS::cov.mcd(X)
 > stopifnot(cc$best == mcc$best,
@@ -1011,25 +1011,25 @@ In covMcd(X, use.correction = FALSE) :
 List of 18
  $ method     : chr "Minimum Covariance Determinant Estimator."
  $ call       : language covMcd(x = X, use.correction = FALSE)
- $ cov        : num [1:4, 1:4] 319.0  61.2 -82.3 102.9  61.2 ...
- $ center     : num [1:4]  0.333  3.000  0.683 -4.267
+ $ cov        : num [1:4, 1:4] 319 61.2 -82.3 102.9 61.2 ...
+ $ center     : num [1:4] 0.333 3 0.683 -4.267
  $ n.obs      : int 7
  $ best       : int [1:6] 1 2 3 4 6 7
  $ alpha      : num 0.5
  $ quan       : num 6
- $ raw.cov    : num [1:4, 1:4] 319.0  61.2 -82.3 102.9  61.2 ...
- $ raw.center : num [1:4]  0.333  3.000  0.683 -4.267
+ $ raw.cov    : num [1:4, 1:4] 319 61.2 -82.3 102.9 61.2 ...
+ $ raw.center : num [1:4] 0.333 3 0.683 -4.267
  $ raw.weights: num [1:7] 1 1 1 1 0 1 1
  $ crit       : num 6011409
- $ raw.mah    : num [1:7]  2.546  2.477  3.224  0.835 24.765 ...
- $ mah        : num [1:7]  2.546  2.477  3.224  0.835 24.765 ...
+ $ raw.mah    : num [1:7] 2.546 2.477 3.224 0.835 24.765 ...
+ $ mah        : num [1:7] 2.546 2.477 3.224 0.835 24.765 ...
  $ mcd.wt     : num [1:7] 1 1 1 1 0 1 1
  $ X          : num [1:7, 1:4] 8 -24 -1 -9 -6 6 22 0 3 0 ...
   ..- attr(*, "dimnames")=List of 2
   .. ..$ : chr [1:7] "1" "2" "3" "4" ...
   .. ..$ : NULL
- $ raw.cnp2   : num [1:2] 1.28 1.00
- $ cnp2       : num [1:2] 1.28 1.00
+ $ raw.cnp2   : num [1:2] 1.28 1
+ $ cnp2       : num [1:2] 1.28 1
  - attr(*, "class")= chr "mcd"
 > mcc <- MASS::cov.mcd(X)
 > stopifnot(cc$best == mcc$best,
@@ -1061,7 +1061,7 @@ In covMcd(X, use.correction = FALSE) :
 +           all.equal(c(mcc$cov / cc$raw.cov), rep(0.7528695976179, p*p)))
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  1.922 0.074 2.059 0 0 
+Time elapsed:  1.993 1.23 3.311 0 0 
 > 
 > ## nsamp = "exact" -- here for p=7
 > coleman.x <- data.matrix(coleman[, 1:6])
@@ -1071,7 +1071,7 @@ Warning in .fastmcd(x, h, nsamp, trace = as.integer(trace)) :
  This may take a very long time!
 
    user  system elapsed 
-  1.131   0.000   1.131 
+  1.308   0.003   1.316 
 > stopifnot(all.equal(CcX$best,
 +                     c(2, 5:9, 11,13, 14:16, 19:20), tol=0))
 > 
